global-accelerator/template.yaml
Resources:
  InstanceSecurityGroup:
    Type: AWS::EC2::SecurityGroup
    Properties:
      GroupDescription: Allow http to client host
      VpcId: vpc-0177b9bf4441cacda
      SecurityGroupIngress:
        - IpProtocol: tcp
          FromPort: 80
          ToPort: 80
          CidrIp: 0.0.0.0/0
  myInstance:
     Type: 'AWS::EC2::Instance'
     Properties: 
        ImageId: ami-02363a012ffa4a7b4
        InstanceType: t3.micro
        KeyName: dor-eks
        SecurityGroupIds:
          - !Ref InstanceSecurityGroup
        UserData:
          Fn::Base64: !Sub |
             #!/bin/bash
             sudo dnf update -y
             sudo dnf install -y httpd
             sudo service httpd start
             chkconfig httpd on
  myEIP:
    Type: AWS::EC2::EIP
    Properties:
      InstanceId: !Ref myInstance
  Accelerator:
    Type: AWS::GlobalAccelerator::Accelerator
    Properties:
      Name: SampleAccelerator
      Enabled: true
  Listener:
    Type: AWS::GlobalAccelerator::Listener
    Properties:
      AcceleratorArn: !Ref Accelerator
      Protocol: TCP
      PortRanges:
      - FromPort: 80
        ToPort: 80
  EndpointGroup:
    Type: AWS::GlobalAccelerator::EndpointGroup
    Properties:
      ListenerArn: !Ref Listener
      EndpointGroupRegion: eu-central-1
      TrafficDialPercentage: 100
      EndpointConfigurations:
      - EndpointId: !Ref myInstance
Outputs:
  AcceleratorDnsName:
    Description: Accelerator DNS Name
    Value:
      Fn::GetAtt:
      - Accelerator
      - DnsName
